<resources>
    <string name="app_name">DB Queries</string>
    <string name="title_home">Home</string>
    <string name="title_memberlist">Member List</string>
    <string name="title_notifications">Notifications</string>
    <string name="incipientinfo">IncipientInfo</string>
    <string name="db_queries_by">DB Queries\nby\nIcipient Info</string>

    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="insert">Insert</string>
    <string name="bundle_id">id</string>
    <string name="str_spinner_one">Andaman and Nicobar Islands</string>
    <string name="update">Update</string>
    <string name="str_empty_name">Name required</string>
    <string name="str_empty_email">Email not valid</string>
    <string name="str_empty_phn">Phone Number is required</string>
    <string name="str_phone_valid">Enter proper phone number with country code</string>
    <string name="str_empty_gender">Gender Required</string>
    <string name="str_empty_country">Select country</string>
    <string name="str_empty_img">Please select image</string>
    <string name="str_take_pic">Take Photo</string>
    <string name="str_take_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="str_select_file">Select File</string>
    <string name="bundle_data">data</string>
    <string name="str_allow_permission">Please allow all permission</string>
    <string name="ok">OK</string>
    <string name="todo">TODO</string>
    <string name="confirm">Confirm</string>
    <string name="str_delete_mes">Are you sure you wan\'t to delete?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="str_settings">Settings</string>
    <string name="str_email_req">Email Required</string>
    <string name="no_data_available">No Data Available</string>
    <string name="title_add">Add</string>
    <string name="title_configure">Configure</string>


</resources>
