<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.home.HomeFragment">
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:id="@+id/constraintMain"
                                                 android:focusable="false"
                                                 android:focusableInTouchMode="true"
                                                 android:layout_height="wrap_content">


        <com.incipientinfo.dbqueries.common.CircleImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:id="@+id/img"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/todo"
                app:layout_constraintTop_toTopOf="parent"/>


        <ImageView
                android:src="@drawable/ic_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgEditPic"
                app:layout_constraintTop_toTopOf="@+id/img"
                app:layout_constraintStart_toStartOf="@+id/img"
                app:layout_constraintEnd_toEndOf="@+id/img"
                app:layout_constraintBottom_toBottomOf="@+id/img"
                app:layout_constraintVertical_bias="0.92"
                app:layout_constraintHorizontal_bias="0.91" android:contentDescription="@string/todo"/>


        <android.support.design.widget.TextInputLayout
                android:id="@+id/txtLayName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:hintAnimationEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textCapWords"
                    android:id="@+id/edName"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtLayEmail"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txtLayName"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:hint="@string/email">


            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/edEmail"
                    android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtLayNum"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/phone_number"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txtLayEmail">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edNum"
                    android:maxLength="16"
                    android:minEms="6"
                    android:inputType="phone"/>

        </android.support.design.widget.TextInputLayout>


        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLayNum"
                android:layout_marginTop="16dp" android:id="@+id/rbGrp">
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginStart="5dp"
                         android:checked="true"
                         android:layout_marginEnd="10dp"
                         android:text="@string/male" android:id="@+id/rbMale"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="5dp"
                         android:text="@string/female" android:id="@+id/rbFemale"/>
        </RadioGroup>


        <Button
                android:text="@string/insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnInsert"
                android:background="@drawable/btn_style"
                app:layout_constraintTop_toBottomOf="@+id/rbGrp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>